<resources>
    <string name="app_name">Conversation without Discrimination</string>
    <string name="ble_not_supported">[RageQuit] BLE not supported on your device! BB :(</string>
    <string name="start">Start</string>
    <string name="esp32_restart">ESP32 RESTART</string>
    <string name="test_screen_1">Test Screen 1</string>
    <string name="test_screen_3">Test Screen 3</string>
    <string name="test_screen_4">Test Screen 4</string>
    <string name="test_screen_6">Test Screen 6</string>
    <string name="update_arduino_input">update Arduino input</string>
    <string name="cmd_text_to_send">Cmd/Text to send</string>
    <string name="send">Send</string>
    <string name="textview">TextView</string>
    <string name="open_list">Open List</string>
    <string name="start_dictation_manually">Start dictation manually</string>
    <string name="check_battery_level">Check Battery Level</string>
    <string name="synthesize_speech_manually">Synthesize speech manually</string>
    <string name="connecty">Connecty</string>
</resources>
