<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/b_Sstop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Stop"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/start"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/b_Sstop"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_ESPRestart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/esp32_restart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_WebUpdate" />

    <Button
        android:id="@+id/b_TestScreen1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/test_screen_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Cmd" />

    <Button
        android:id="@+id/b_TestScreen2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Test Screen 2"
        app:layout_constraintStart_toEndOf="@+id/b_TestScreen1"
        app:layout_constraintTop_toBottomOf="@+id/et_Cmd" />

    <Button
        android:id="@+id/b_TestScreen3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/test_screen_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/b_TestScreen2"
        app:layout_constraintTop_toBottomOf="@+id/et_Cmd" />

    <Button
        android:id="@+id/b_TestScreen4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_screen_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_TestScreen1" />

    <Button
        android:id="@+id/b_TestScreen5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test Screen 5"
        app:layout_constraintStart_toEndOf="@+id/b_TestScreen4"
        app:layout_constraintTop_toBottomOf="@+id/b_TestScreen2" />

    <Button
        android:id="@+id/b_TestScreen6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_screen_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/b_TestScreen5"
        app:layout_constraintTop_toBottomOf="@+id/b_TestScreen3" />

    <Button
        android:id="@+id/b_WebUpdate"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="ESP32 WebUpdate Mode"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_TestScreen4" />

    <Button
        android:id="@+id/b_updateInput"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="580dp"
        android:text="@string/update_arduino_input"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/voiceOutput" />

    <EditText
        android:id="@+id/et_Cmd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/cmd_text_to_send"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/b_SendCmd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Status" />

    <Button
        android:id="@+id/b_SendCmd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="8dp"
        android:text="@string/send"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_Sstop" />

    <TextView
        android:id="@+id/tv_Status"
        android:layout_width="91dp"
        android:layout_height="69dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toStartOf="@+id/b_Start"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<Button
     \\
    android:id="@+id/b_thelisten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotationX="0"
        android:text="TheListen"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="609dp" />
*/-->

    <!-- <Button
        android:id="@+id/b_OpenList"
        android:layout_width="85dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/open_list"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_ESPRestart" />
 -->

    <TextView
        android:id="@+id/voiceOutput"
        android:layout_width="116dp"
        android:layout_height="76dp"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text=""
        android:textColor="#FF0000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/arduinoMsg"
        android:layout_width="299dp"
        android:layout_height="56dp"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text=""
        android:textColor="#FF0000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/updateBattery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/voiceOutput"

        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/startDictation"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="396dp"
        android:layout_marginEnd="8dp"
        android:background="#BF51DA"
        android:onClick="onClick"
        android:text="@string/start_dictation_manually"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voiceOutput" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/startDictation"
        app:layout_constraintVertical_bias="0.248" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="@android:color/background_light"
        app:title="Bluetooth Connection" />

    <Button
        android:id="@+id/buttonConnect"
        android:layout_width="142dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="8dp"
        android:background="#6DE622"
        android:onClick="onClick"
        android:text="@string/connecty"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voiceOutput" />

    <Button
        android:id="@+id/updateBattery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="526dp"
        android:layout_marginEnd="8dp"
        android:background="#0048FF"
        android:onClick="onClick"
        android:text="@string/check_battery_level"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voiceOutput"/>

    <Button
        android:id="@+id/btnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/synthesize_speech_manually"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_ESPRestart" />


</androidx.constraintlayout.widget.ConstraintLayout>